load("//tools:defaults.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

TEST_SRCS = [
    "**/*_test.ts",
    "run_tests.ts",
]

ts_library(
    name = "tfjs-backend-cpu_src_lib",
    srcs = glob(
        ["**/*.ts"],
        exclude = TEST_SRCS + ["index.ts"],
    ),
    module_name = "@tensorflow/tfjs-backend-cpu/dist",
    deps = [
        "//tfjs-core/src:tfjs-core_lib",
        "@npm//@types/seedrandom",
        "@npm//seedrandom",
    ],
)

ts_library(
    name = "tfjs-backend-cpu_lib",
    srcs = ["index.ts"],
    module_name = "@tensorflow/tfjs-backend-cpu",
    deps = [
        ":tfjs-backend-cpu_src_lib",
    ],
)

ts_library(
    name = "tfjs-backend-cpu_test_lib",
    testonly = True,
    srcs = glob(TEST_SRCS),
    module_name = "@tensorflow/tfjs-backend-cpu/dist",
    deps = [
        ":tfjs-backend-cpu_lib",
        ":tfjs-backend-cpu_src_lib",
        "//tfjs-core/src:tfjs-core_lib",
        "//tfjs-core/src:tfjs-core_src_lib",
        "//tfjs-core/src:tfjs-core_test_lib",
        "@npm//@types/jasmine",
        "@npm//jasmine",
    ],
)
