load("@//tools:defaults.bzl", "ts_library")

# Copyright 2022 Google LLC. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# =============================================================================
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

package(default_visibility = ["//visibility:public"])

nodejs_binary(
    name = "create_worker_module_bin",
    data = [
        "create-worker-module.js",
        "@npm//argparse",
    ],
    entry_point = "create-worker-module.js",
)

nodejs_binary(
    name = "patch_threaded_simd_module_bin",
    data = [
        "patch-threaded-simd-module.js",
        "@npm//argparse",
    ],
    entry_point = "patch-threaded-simd-module.js",
)

ts_library(
    name = "patch_wechat_webassembly",
    srcs = [
        "patch_wechat_webassembly.ts",
    ],
    module_name = "patch_wechat_webassembly",
    deps = [
        "@npm//@types/estree",
        "@npm//estree-walker",
        "@npm//rollup",
    ],
)
