# Copyright 2021 Google LLC. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# =============================================================================

load("//tools:defaults.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

TEST_SRCS = [
    "**/*_test.ts",
]

ts_library(
    name = "tfjs-backend-webgpu_src_lib",
    srcs = glob(
        ["**/*.ts"],
        exclude = TEST_SRCS + ["index.ts"],
    ),
    module_name = "@tensorflow/tfjs-backend-webgpu/dist",
    deps = [
        "//tfjs-backend-cpu/src:tfjs-backend-cpu_lib",
        "//tfjs-backend-cpu/src:tfjs-backend-cpu_src_lib",
        "//tfjs-core/src:tfjs-core_lib",
        "//tfjs-core/src:tfjs-core_src_lib",
        "@npm//@webgpu/glslang",
        "@npm//@webgpu/types",
    ],
)

ts_library(
    name = "tfjs-backend-webgpu_lib",
    srcs = ["index.ts"],
    module_name = "@tensorflow/tfjs-backend-webgpu",
    deps = [
        ":tfjs-backend-webgpu_src_lib",
        "//tfjs-core/src:tfjs-core_lib",
        "//tfjs-core/src:tfjs-core_src_lib",
        "@npm//@webgpu/glslang",
    ],
)

ts_library(
    name = "tfjs-backend-webgpu_test_lib",
    testonly = True,
    srcs = glob(TEST_SRCS),
    module_name = "@tensorflow/tfjs-backend-webgpu/dist",
    deps = [
        ":tfjs-backend-webgpu_lib",
        ":tfjs-backend-webgpu_src_lib",
        "//tfjs-core/src:tfjs-core_lib",
        "//tfjs-core/src:tfjs-core_src_lib",
        "//tfjs-core/src:tfjs-core_test_lib",
        "@npm//@types/jasmine",
        "@npm//jasmine",
    ],
)
