load("//tools:defaults.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "test_snippets_lib",
    testonly = True,
    srcs = [
        "test_snippets.ts",
    ],
    deps = [
        "//tfjs-backend-cpu/src:tfjs-backend-cpu_lib",
        "//tfjs-core/scripts/test_snippets:test_snippets_util_lib",
        "//tfjs-core/src:tfjs-core_lib",
        "//tfjs-core/src:tfjs-core_src_lib",
        "//tfjs-data/src:tfjs-data_lib",
        "//tfjs-layers/src:tfjs-layers_lib",
    ],
)
